<resources>
    <string name="app_name">UsefulLanguageMaster</string>
    <string name="app_name_with_spaces">Useful language master</string>

    <string name="sp_settings_key">UsefulLanguageMaster_key</string>
    <string name="sp_vocabulary_id">Vocabulary_id</string>

    <string name="vocabulary_name">Vocabulary name:</string>
    <string name="vocabulary">Vocabulary:</string>
    <string name="vocabularies">Vocabularies</string>
    <string name="language_studied">Language studied:</string>
    <string name="translation_language">Translation language:</string>
    <string name="add_new_vocabulary">Add new vocabulary</string>

    <string name="training">Training</string>
    <string name="add_new_data">Add new data</string>
    <string name="view_all_data">View all data</string>
    <string name="statistics">Statistics</string>

    <string name="english">English</string>

    <!--Add new data-->
    <string name="type">Type:</string>
    <string name="word">*Word:</string>
    <string name="part_of_speech">Part of speech:</string>
    <string name="word_translation">*Word translation:</string>
    <string name="add_phrase_example">+ Phrase example</string>
    <string name="phrase">Phrase:</string>
    <string name="phrase_translation">Phr. translation:</string>
    <string name="add_new_translation">+ Another translation</string>
    <string name="complete_and_exit">Complete and exit</string>
    <string name="complete_and_add_new_item">Complete and add new item</string>

</resources>