<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_cream">

    <ImageView
        android:id="@+id/ivBackgroundMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_main_1x" />

    <TextView
        android:id="@+id/tvVocabularyTop"
        style="@style/Screen_title"
        android:text="@string/add_new_data"
        app:layout_constraintBottom_toTopOf="@id/svAddV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/svAddV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvVocabularyTop"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="220dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/tvTypeTitle"
                style="@style/Field_title"
                android:layout_marginStart="20dp"
                android:text="@string/type"
                app:layout_constraintTop_toTopOf="@id/spType"
                app:layout_constraintBottom_toBottomOf="@id/spType"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/spType"
                android:layout_width="210dp"
                android:layout_height="38dp"
                android:layout_marginStart="20dp"
                android:popupBackground="@color/yellow_card_vocabulary"
                app:layout_constraintStart_toEndOf="@+id/tvTypeTitle"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/back_spinner_item"/>

            <TextView
                android:id="@+id/tvWordTitle"
                style="@style/Field_title"
                android:text="@string/word"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="@+id/tvTypeTitle"
                app:layout_constraintTop_toBottomOf="@+id/spType" />

            <EditText
                android:id="@+id/etWord"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:ems="10"
                android:inputType="text"
                android:layout_marginTop="-10dp"
                android:textSize="20sp"
                android:fontFamily="@font/inter_medium_500"
                android:gravity="center_horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/tvWordTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvWordTitle"
                app:layout_constraintTop_toTopOf="@+id/tvWordTitle" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvTranslation"
                android:layout_width="0dp"
                android:layout_height="204dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etWord"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="32dp"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="@color/yellow_card_vocabulary">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvTitlePOS"
                        style="@style/Field_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        app:layout_constraintTop_toTopOf="@id/spPOS"
                        app:layout_constraintBottom_toBottomOf="@id/spPOS"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/part_of_speech" />

                    <Spinner
                        android:id="@+id/spPOS"
                        android:layout_width="172dp"
                        android:layout_height="38dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        app:layout_goneMarginStart="20dp"
                        android:popupBackground="@color/yellow_card_vocabulary"
                        app:layout_constraintStart_toEndOf="@id/tvTitlePOS"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:listitem="@layout/back_spinner_item"/>

                    <TextView
                        android:id="@+id/tvTitleTranslation"
                        style="@style/Field_title"
                        android:layout_marginTop="20dp"
                        android:text="@string/word_translation"
                        app:layout_constraintStart_toStartOf="@id/tvTitlePOS"
                        app:layout_constraintTop_toBottomOf="@id/spPOS" />

                    <EditText
                        android:id="@+id/etTranslation"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="-10dp"
                        android:ems="10"
                        android:inputType="text"
                        app:layout_constraintTop_toTopOf="@id/tvTitleTranslation"
                        app:layout_constraintBottom_toBottomOf="@id/tvTitleTranslation"
                        app:layout_constraintEnd_toEndOf="@id/spPOS"
                        app:layout_constraintStart_toEndOf="@id/tvTitleTranslation" />

                    <Button
                        android:id="@+id/bAddNewExample"
                        style="@style/Button_wide_yellow_dark"
                        android:text="@string/add_phrase_example"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="33dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/etTranslation"
                        app:layout_constraintStart_toStartOf="@+id/tvTitleTranslation"
                        app:layout_constraintTop_toBottomOf="@+id/etTranslation" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvAddNewTranslation"
                android:layout_width="0dp"
                android:layout_height="82dp"
                android:layout_marginTop="32dp"
                app:cardBackgroundColor="@color/yellow_card_vocabulary"
                app:cardCornerRadius="20dp"
                app:layout_constraintStart_toStartOf="@id/cvTranslation"
                app:layout_constraintEnd_toEndOf="@id/cvTranslation"
                app:layout_constraintTop_toBottomOf="@id/cvTranslation"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/bAddNewTranslation"
                        style="@style/Button_wide_yellow_dark"
                        android:layout_marginHorizontal="20dp"
                        android:text="@string/add_new_translation"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/bCompleteExit"
                style="@style/Button_wide_default"
                android:layout_marginTop="70dp"
                app:layout_constraintTop_toBottomOf="@id/cvAddNewTranslation"
                app:layout_constraintStart_toStartOf="@id/cvAddNewTranslation"
                app:layout_constraintEnd_toEndOf="@id/cvAddNewTranslation"
                android:text="@string/complete_and_exit" />

            <Button
                android:id="@+id/bCompleteRepeat"
                style="@style/Button_wide_default"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@id/bCompleteExit"
                app:layout_constraintStart_toStartOf="@id/bCompleteExit"
                app:layout_constraintEnd_toEndOf="@id/bCompleteExit"
                android:text="@string/complete_and_add_new_item" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>