<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <ImageView
        android:id="@+id/ivBackgroundMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_main_1x" />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold_700"
        android:includeFontPadding="false"
        android:text="@string/app_name_with_spaces"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0776818742293465" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvVocabulary"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:backgroundTint="@color/yellow_card_vocabulary"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tvAppName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintHeight_percent="0.1573770491803279"
        app:layout_constraintWidth_percent="0.8058252427184466"

        app:layout_constraintVertical_bias="0.1162790697674419"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/tvCurVocabulary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Text_card_vocabulary"
                android:text="@string/vocabulary_name"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                app:layout_constraintWidth_percent="0.572289156626506"
                app:layout_constraintHeight_percent="0.1666666666666667"
                app:layout_constraintHorizontal_bias="0.2816901408450704"
                app:layout_constraintVertical_bias="0.3083333333333333" />

            <TextView
                android:id="@+id/tvCurLanguage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/language_studied"
                style="@style/Text_card_vocabulary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tvCurVocabulary"
                app:layout_constraintStart_toStartOf="@+id/tvCurVocabulary"
                app:layout_constraintTop_toBottomOf="@+id/tvCurVocabulary"
                app:layout_constraintVertical_bias="0.3728813559322034"
                app:layout_constraintWidth_percent="0.572289156626506"
                app:layout_constraintHeight_percent="0.1666666666666667"/>

            <TextView
                android:id="@+id/tvVocName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Text_card_vocabulary"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="@+id/tvCurVocabulary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvCurVocabulary"
                app:layout_constraintTop_toTopOf="@+id/tvCurVocabulary"

                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintWidth_percent="0.2349397590361446"
                app:layout_constraintHeight_percent="0.1666666666666667"


                tools:text="Nor1" />

            <ImageView
                android:id="@+id/ivLangStudFlag"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/tvCurLanguage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvCurLanguage"
                app:layout_constraintTop_toTopOf="@+id/tvCurLanguage"
                app:srcCompat="@drawable/flag_british_medium"

                app:layout_constraintHorizontal_bias="0.3444772205834153"
                app:layout_constraintWidth_percent="0.123433734939759"
                app:layout_constraintHeight_percent="0.1991666666666667"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/bTraining"
        style="@style/Button_wide"
        android:text="@string/training"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvVocabulary"

        app:layout_constraintVertical_bias="0.1428571428571429"/>

    <Button
        android:id="@+id/bAddNewData"
        style="@style/Button_wide"
        android:text="@string/add_new_data"

        app:layout_constraintTop_toBottomOf="@+id/bTraining"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/bTraining"
        app:layout_constraintEnd_toEndOf="@+id/bTraining"

        app:layout_constraintVertical_bias="0.1058201058201058"/>

    <Button
        android:id="@+id/bViewAllData"
        style="@style/Button_wide"
        android:text="@string/view_all_data"

        app:layout_constraintTop_toBottomOf="@+id/bAddNewData"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/bAddNewData"
        app:layout_constraintEnd_toEndOf="@+id/bAddNewData"

        app:layout_constraintVertical_bias="0.1351351351351351"
         />


</androidx.constraintlayout.widget.ConstraintLayout>