<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvGeneral"
    android:layout_width="372dp"
    android:layout_height="196dp"
    android:layout_marginTop="50dp"
    android:layout_marginHorizontal="20dp"
    app:cardCornerRadius="20dp"
    android:backgroundTint="@color/yellow_card_vocabulary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clGeneral"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvVocabularyTitle"
            style="@style/Text_card_vocabulary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/vocabulary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1204819277108434"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2209302325581395"
            app:layout_constraintWidth_percent="0.5591397849462366" />

        <TextView
            android:id="@+id/tvLanguageSTitle"
            style="@style/Text_card_vocabulary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/language_studied"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tvVocabularyTitle"
            app:layout_constraintStart_toStartOf="@+id/tvVocabularyTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvVocabularyTitle"
            app:layout_constraintVertical_bias="0.2105263157894737"/>

        <TextView
            android:id="@+id/tvLanguageTTitle"
            style="@style/Text_card_vocabulary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/translation_language"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tvLanguageSTitle"
            app:layout_constraintStart_toStartOf="@+id/tvLanguageSTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvLanguageSTitle"
            app:layout_constraintVertical_bias="0.3870967741935484" />

        <TextView
            android:id="@+id/tvVocabularyCurrent"
            style="@style/Text_card_vocabulary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tvVocabularyTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvVocabularyTitle"
            app:layout_constraintTop_toTopOf="@+id/tvVocabularyTitle"
            app:layout_constraintWidth_percent="0.1881720430107527"
            app:layout_constraintHorizontal_bias="0.1621621621621622"
            tools:text="Eng1" />

        <ImageView
            android:id="@+id/ivLanguageSCurrent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:background="@color/black"
            android:elevation="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvLanguageSTitle"
            app:layout_constraintEnd_toEndOf="@+id/tvVocabularyCurrent"
            app:layout_constraintHeight_percent="0.2142857142857143"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvVocabularyCurrent"
            app:layout_constraintTop_toTopOf="@+id/tvLanguageSTitle"
            app:layout_constraintWidth_percent="0.1612903225806452"
            app:srcCompat="@drawable/flag_british_medium"/>

        <TextView
            android:id="@+id/tvLanguageTCurrent"
            style="@style/Text_card_vocabulary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/english"
            app:layout_constraintBottom_toBottomOf="@+id/tvLanguageTTitle"
            app:layout_constraintEnd_toEndOf="@+id/tvVocabularyCurrent"
            app:layout_constraintStart_toStartOf="@+id/tvVocabularyCurrent"
            app:layout_constraintTop_toTopOf="@+id/tvLanguageTTitle" />

        <RadioButton
            android:id="@+id/rbTurnOnOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:minHeight="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvLanguageSTitle"
            app:layout_constraintEnd_toEndOf="parent"
            android:checked="false"
            app:layout_constraintStart_toEndOf="@+id/tvVocabularyCurrent"
            app:layout_constraintTop_toTopOf="@+id/tvLanguageSTitle" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
